# AutonomousReforestationDrone

./: .gitignore  .gitmodules  README.md
docs/bibliography/: README.md
docs/developer/: README.md
docs/report/: README.md
docs/risk/: README.md
docs/user/: README.md
img/: screenLidar
src/bfp_generation/: CMakeLists.txt  bfp.cpp  bfp.hpp  bfp_gps.csv  check_csv.cpp  cp_to_ws.sh  gps.csv  gps_keypoints.csv  main.cpp
src/canon_arduino/: 28BYJ-48_Stepper.STEP  Detection_graine.ino  Seed_blocker.step  Seed_bowl.step  Seed_catcher.step  ULN2003 Stepper Driver.stp  US Solid 12V Valve.step  control_stepper.ino  photodiode.step
src/lidar_pkg/: CMakeLists.txt  package.xml
src/lidar_pkg/src/: lidar_node.cpp  lidarlite_v3.cpp
src/ws/src/px4_ros_com/: .gitignore  CMakeLists.txt  package.xml
src/ws/src/px4_ros_com/src/examples/offboard/: offboard_control copy.cpp  offboard_control.cpp
src/ws_controller/src/px4_ros_com/src/examples/offboard/: bfp_gps.csv  offboard_control.cpp
